# wooprice

./: .dockerignore  .env.beta.example  .env.example  .gitignore  Dockerfile  Dockerfile.beta  README.md  alembic.ini  alembic_a2.ini  alembic_beta.ini  docker-compose.a2.yml  docker-compose.beta.yml  docker-compose.yml  nginx-sse.conf  pyproject.toml  requirements.txt  wooprice.postman_collection.json
.claude/: CLAUDE.md  GOVERNANCE.md  WORKFLOW.md
a2_migrations/: env.py
alembic/: env.py
alembic_a2/: env.py
alembic_beta/: env.py
app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  validation.py
cli/: __init__.py  adapters.py  ai.py  backup.py  channels.py  configure.py  create_admin.py  diagnostics.py  health.py  install.py  integrations.py  logs.py  main.py  menu.py  migrate.py  scheduler.py  sources.py  status.py  update.py  users.py
docs/: A2_ARCHITECTURE.md  A2_MIGRATION_STRATEGY.md  AI_OPERATING_MANUAL.md  ARCHITECTURE.md  BETA_MASTER_SPEC.md  BETA_STRATEGY.md  MIGRATION_STATUS.md  OWNER_AGENT_WORKFLOW.md  OWNER_DECISIONS.md  PHASE_5_CUTOVER_PLAN.md  PLATFORM_MAP.md  PROJECT_OPERATING_MODEL.md  ROADMAP.md  WORKFLOW.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
installer/: __init__.py  install.sh  installer_core.py
plugins/: README.md
scripts/: build_frontend.sh  dev_reset.sh  dev_start.sh  generate_openapi.sh  lint.sh  remove_test_users.py  test.sh  wooprice
static/: index.html
tests/: conftest.py  test_730b_capability.py  test_730b_health_behavioral.py  test_config_dx.py  (+17 more)
(+365 files in other folders)
